# kana-pratice

./: .gitignore  README.md  kana_quiz.py  pyproject.toml
